--- a/unosim.css
+++ b/unosim.css
@@ -9,6 +9,7 @@ body{
 }
 
 .card{
+	cursor: pointer;
 	display:inline-block;
 	margin-top:10px;
 	min-height:100px;
@@ -17,8 +18,10 @@ body{
 	vertical-align: middle;
 	margin-right:10px;
 	font-size:35px;
-	border:1px solid white;
+	border: 2px solid #888888;
 	border-radius:5px;
+	transition: all 0.1s ease-in-out;
+	filter: grayscale(0.4);
 }
 
 .card-label{
@@ -32,14 +35,37 @@ body{
 .card.card-blue{background-color: #5bc0de;}
 .card.card-info{background-color: #222222;}
 
+.player-turn > .card{
+	border: 4px solid #eeeeee;
+	filter: grayscale(0);
+}
+
+.player-turn > .card:hover{
+	border: 4px dashed #eeeeee;
+	filter: grayscale(0);
+}
+
 #deck{
 	padding-left:30px;
+}
+
+#pile > .card:first-child{
+	border: 4px solid #eeeeee;
+	filter: grayscale(0);
 }
 
 .player-label{
 	margin-top:15px;
 	height:120px;
 	text-align: center;
+	transition: all 0.3s ease-in-out;
+	border-right: 5px solid #888888;
+	padding-right: 10px;
+}
+
+.player-label.player-turn{
+	border-right: 15px solid #eeeeee;
+	padding-right: 0px;
 }
 
 .player-name{
